[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Tech Oldies Splash Screen.jpg" type="Texture" id=1]
[ext_resource path="res://Scripts/Splash Screen.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Splash Timer.gd" type="Script" id=3]

[node name="SplashScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="SplashInit" type="Sprite" parent="."]
z_index = 5
z_as_relative = false
texture = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
z_as_relative = false
texture = ExtResource( 1 )

[node name="InitTimer" type="Timer" parent="."]
script = ExtResource( 3 )
